--- a/KotmiLib/KotmiLib.csproj
+++ b/KotmiLib/KotmiLib.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AVRCHMReport.cs" />
     <Compile Include="KotmiClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
